--- a/data/home.yml
+++ b/data/home.yml
@@ -4,7 +4,7 @@ en:
   slogan: Nulla magna eiusmod ea eu irure exercitation non incididunt.
   shortDescription: |
     
-    → Get your own copy of this website in minutes.
+    → Get your own copy of this website in minutes...
     → Edit everything with no single line of code.
     → It's free and open-source!
   image: /media/wave.jpg
